<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="212dp"
        android:layout_height="212dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_user"
        android:contentDescription="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_user"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/ic_user" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/background_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@drawable/ic_books"
            android:contentDescription="@string/book"
            android:onClick="ClickMain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_books"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@drawable/ic_books" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginEnd="17dp"
            android:background="@drawable/ic_gear"
            android:contentDescription="@string/settings"
            android:onClick="ClickSettings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_gear"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@drawable/ic_gear" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/ic_newroundnotext"
            android:contentDescription="@string/about_as"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_newroundnotext"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@drawable/ic_newroundnotext" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="140dp"
        android:layout_height="31dp"
        android:layout_marginTop="108dp"
        android:contentDescription="@string/User_name"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/buttonExit"
        android:layout_width="91dp"
        android:layout_height="64dp"
        android:layout_marginBottom="44dp"
        android:background="@color/background_dark"
        android:onClick="ClickEntry"
        android:text="Выйти"
        android:textColor="@color/white"
        app:backgroundTint="@color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addBook"
        android:layout_width="233dp"
        android:layout_height="65dp"
        android:layout_marginBottom="44dp"
        android:background="@color/background_dark"
        android:onClick="ClickViewUsers"
        android:text="Просмотр пользователей"
        android:textColor="@color/white"
        app:backgroundTint="@color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/camera"
        android:layout_width="164dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:background="@color/background_dark"
        android:onClick="ClickCamera"
        android:text="Изменить аватар"
        android:textColor="@color/white"
        app:backgroundTint="@color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="Телефон:"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.646" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="Email:"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.139" />

    <TextView
        android:id="@+id/PhoneNumber"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.645" />

    <TextView
        android:id="@+id/Email"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PhoneNumber"
        app:layout_constraintVertical_bias="0.107" />


</androidx.constraintlayout.widget.ConstraintLayout>